# ol

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  GROK.md  MANIFEST.in  PLAN.md  README.md  TODO  ainotes.md  instructions.txt  project_spec.md  pyproject.toml  requirements-dev.txt  summary.txt
.grok/agents/: coder.md  manager.md  swarm.md
.grok/rules/: 00-swarm-sop.md  10-python-style.md  20-git-and-version.md
src/ol/: __init__.py  cli.py  config.py  init.py  version.py
tests/: test_cli.py  test_config.py  test_init.py  test_stdin.py  test_update.py  test_version.py
